--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "iyoutube",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "description": "",
     "main": "src/main.ts",
     "scripts": {
@@ -15,5 +15,9 @@
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ToBiDi0410/IYoutube"
     }
 }
