--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
     "name": "iyoutube",
     "version": "0.0.4",
     "description": "The ultimate unofficial YouTube API Client for Javascript",
-    "main": "src/main.ts",
+    "main": "output/main.js",
+    "types": "output/main.d.ts",
     "scripts": {
-        "test": "npx nodemon test/main.ts --ignore *.json"
+        "test": "npx nodemon test/main.ts --ignore *.json",
+        "compile": "tsc"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "node-fetch": "^2.6.7",
-        "ts-node": "^10.7.0"
+        "ts-node": "^10.7.0",
+        "typescript": "^4.6.3"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
