--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "module": "CommonJS",
       "declaration": true,
       "strict": true,
+      "preserveConstEnums": true,
     },
-    "include": ["./src/*"],
+    "include": ["./src/*", "./src/adapters/*"],
 }
